# generative-ai-ml-latam-samples

./: .gitignore  README.md
blueprints/multi-agent-compliance-analysis/backend/agents/lawyer_agent/: Dockerfile  agent.py  pyproject.toml  requirements.txt  test_invoke_agent.py
blueprints/multi-agent-compliance-analysis/backend/agents/lawyer_agent/kb_answer_tool/: __init__.py  kb_answer.py  kb_config.py
blueprints/multi-agent-compliance-analysis/backend/agents/lawyer_agent/kb_answer_tool/prompts/: generate_qa_kb_prompts.py  generate_query_augmentation_prompts.py  qa_kb_prompts.py
blueprints/multi-agent-compliance-analysis/backend/agents/lawyer_agent/prompt_selector/: generate_lawyer_prompt.py  lawyer_agent_prompts.py
blueprints/multi-agent-compliance-analysis/backend/agents/lawyer_agent/query_categorization_tool/: query_categorization.py  user_analysis_mapping.py
blueprints/multi-agent-compliance-analysis/backend/agents/lawyer_agent/query_categorization_tool/prompts/: generate_query_augmentation_prompts.py  query_categorization_prompts.py
blueprints/multi-agent-compliance-analysis/backend/agents/lawyer_agent/query_categorization_tool/structured_output/: questions.py
blueprints/multi-agent-compliance-analysis/backend/agents/lawyer_agent/structured_output/: LawyerResponse.py
blueprints/multi-agent-compliance-analysis/backend/agents/writer_agent/: Dockerfile  __init__.py  agent.py  pyproject.toml  test_invoke_agent.py
blueprints/multi-agent-compliance-analysis/backend/agents/writer_agent/prompt_selector/: generate_writer_prompt.py  writer_agent_prompts.py
(+285 files in other folders)
